<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pathfinder Player Tool</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_character">New Character</string>
    <string name="title_activity_main_tabbed">MainTabbedActivity</string>
    <string name="place_holder">ph</string>
    <string name="player_level">Level</string>
    <string name="player_experience">Experience</string>
    <string name="player_next">Next</string>
    <string name="player_class">Class</string>
    <string name="level_up">Level Up</string>
    <string name="player_info">Info</string>
    <string name="player_level_up">Level Up</string>
    <string name="rate_application">Rate Application</string>
    <string name="load_profile">Load Profile</string>
    <string name="load_combat">Load Combat</string>
    <string name="load_skills">Load Skills</string>
    <string name="load_inventory">Load Inventory</string>
    <string name="load_feats">Load Feats</string>
    <string name="load_special_abilities">Load Special Abilities</string>
    <string name="load_spells">Load SpellBook</string>
    <string name="load_notes">Load Notes</string>
    <string name="skill_base_value">10</string>
    <string name="strength">Strength</string>
    <string name="dexterity">Dexterity</string>
    <string name="constitution">Constitution</string>
    <string name="intelligence">Intelligence</string>
    <string name="charisma">Charisma</string>
    <string name="wisdom">Wisdom</string>
    <string name="health">HP</string>
    <string name="armor_class">AC</string>
    <string name="flatfooted">Flatfooted</string>
    <string name="touch">Touch</string>
    <string name="saves_cmd">Saves/CMD</string>
    <string name="init">Init</string>
    <string name="base_attack">BAB</string>
    <string name="cmb">CMB</string>
    <string name="move">Move</string>
    <string name="transfer_character">Transfer Character</string>

</resources>
