<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.pathfinderplayertool.MainTabbedActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/save_character"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="Save Character"
        android:icon="@drawable/save_character_icon"/>
    <item
        android:id="@+id/transfer_character" 
        android:title="@string/transfer_character" 
        android:orderInCategory="101" 
        android:showAsAction="always"
        android:icon="@drawable/transfer_character_icon"></item>
    <item 
        android:id="@+id/load_profile" 
        android:title="@string/load_profile" 
        android:orderInCategory="1" 
        android:showAsAction="never"/>
    <item 
        android:id="@+id/load_combat" 
        android:title="@string/load_combat" 
        android:orderInCategory="2" 
        android:showAsAction="never"/>
    <item 
        android:id="@+id/load_skills" 
        android:title="@string/load_skills" 
        android:orderInCategory="3" 
        android:showAsAction="never"/>
    <item 
        android:id="@+id/load_spells" 
        android:title="@string/load_spells" 
        android:orderInCategory="4" 
        android:showAsAction="never"/>
    <item 
        android:id="@+id/load_inventory" 
        android:title="@string/load_inventory" 
        android:orderInCategory="5" 
        android:showAsAction="never"/>
    <item 
        android:id="@+id/load_feats" 
        android:title="@string/load_feats" 
        android:orderInCategory="6" 
        android:showAsAction="never"/>
    <item 
        android:id="@+id/load_notes" 
        android:title="@string/load_notes" 
        android:orderInCategory="7" 
        android:showAsAction="never"/>
    

</menu>
