<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.pathfinderplayertool.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="110"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item 
        android:id="@+id/new_character" 
        android:title="@string/new_character" 
        android:orderInCategory="101" 
        android:showAsAction="always"
        android:icon="@drawable/add_icon"></item>
    <item
        android:id="@+id/rate_application" 
        android:title="@string/rate_application" 
        android:orderInCategory="102" 
        android:showAsAction="never"
        android:icon="@drawable/rate_icon"></item>
    
</menu>
