<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/charVertMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="2"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/picture_view"
            android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="3"
		    android:layout_marginTop="2dp"
			android:layout_marginBottom="2dp"
			android:layout_marginLeft="2dp"
			android:layout_marginRight="2dp"
			android:background="@drawable/customborder_padding_black"
			android:onClick="changePhoto"
            android:src="@drawable/amiri" />

        <LinearLayout
            android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="2"
            android:orientation="vertical" >
            <TextView
	            android:id="@+id/str_text"
	            android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_weight="1"
			    android:gravity="center"
			    android:background="#000"
			    android:textColor="#FFF"
			    android:layout_marginTop="2dp"
			    android:layout_marginBottom="2dp"
			    android:layout_marginLeft="2dp"
			    android:layout_marginRight="2dp"
			    android:onClick="viewStrength"
	            android:text="@string/strength" />
            <TextView
	            android:id="@+id/dex_text"
	            android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_weight="1"
			    android:gravity="center"
			    android:background="#000"
			    android:textColor="#FFF"
			    android:layout_marginBottom="2dp"
			    android:layout_marginLeft="2dp"
			    android:layout_marginRight="2dp"
	            android:text="@string/dexterity" />
            <TextView
	            android:id="@+id/con_text"
	            android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_weight="1"
			    android:gravity="center"
			    android:background="#000"
			    android:textColor="#FFF"
			    android:layout_marginBottom="2dp"
			    android:layout_marginLeft="2dp"
			    android:layout_marginRight="2dp"
	            android:text="@string/constitution" />
            <TextView
	            android:id="@+id/int_text"
	            android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_weight="1"
			    android:gravity="center"
			    android:background="#000"
			    android:textColor="#FFF"
			    android:layout_marginBottom="2dp"
			    android:layout_marginLeft="2dp"
			    android:layout_marginRight="2dp"
	            android:text="@string/intelligence" />
            <TextView
	            android:id="@+id/wis_text"
	            android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_weight="1"
			    android:gravity="center"
			    android:background="#000"
			    android:textColor="#FFF"
			    android:layout_marginBottom="2dp"
			    android:layout_marginLeft="2dp"
			    android:layout_marginRight="2dp"
	            android:text="@string/wisdom" />
            <TextView
	            android:id="@+id/cha_text"
	            android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_weight="1"
			    android:gravity="center"
			    android:background="#000"
			    android:textColor="#FFF"
			    android:layout_marginBottom="2dp"
			    android:layout_marginLeft="2dp"
			    android:layout_marginRight="2dp"
	            android:text="@string/charisma" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
            android:orientation="vertical" >
            <TextView
	            android:id="@+id/str_value_text"
	            android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_weight="1"
			    android:gravity="center"
			    android:layout_marginTop="2dp"
			    android:layout_marginBottom="2dp"
			    android:layout_marginLeft="2dp"
			    android:layout_marginRight="2dp"
			    android:background="@drawable/customborder_padding_black"
	            android:text="@string/place_holder" />
            <TextView
	            android:id="@+id/dex_value_text"
	            android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_weight="1"
			    android:gravity="center"
			    android:layout_marginBottom="2dp"
			    android:layout_marginLeft="2dp"
			    android:layout_marginRight="2dp"
			    android:background="@drawable/customborder_padding_black"
	            android:text="@string/place_holder" />
            <TextView
	            android:id="@+id/con_value_text"
	           android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_weight="1"
			    android:gravity="center"
			    android:layout_marginBottom="2dp"
			    android:layout_marginLeft="2dp"
			    android:layout_marginRight="2dp"
			    android:background="@drawable/customborder_padding_black"
	            android:text="@string/place_holder" />
            <TextView
	            android:id="@+id/int_value_text"
	            android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_weight="1"
			    android:gravity="center"
			    android:layout_marginBottom="2dp"
			    android:layout_marginLeft="2dp"
			    android:layout_marginRight="2dp"
			    android:background="@drawable/customborder_padding_black"
	            android:text="@string/place_holder" />
            <TextView
	            android:id="@+id/wis_value_text"
	            android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_weight="1"
			    android:gravity="center"
			    android:layout_marginBottom="2dp"
			    android:layout_marginLeft="2dp"
			    android:layout_marginRight="2dp"
			    android:background="@drawable/customborder_padding_black"
	            android:text="@string/place_holder" />
            <TextView
	            android:id="@+id/cha_value_text"
	            android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_weight="1"
			    android:gravity="center"
			    android:layout_marginBottom="2dp"
			    android:layout_marginLeft="2dp"
			    android:layout_marginRight="2dp"
			    android:background="@drawable/customborder_padding_black"
	            android:text="@string/place_holder" />
            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="0dp"
		    android:layout_height="match_parent"
		    android:layout_weight="1"
            android:orientation="vertical" >
            
            <ImageView
	            android:id="@+id/dice_str"
	            android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_weight="1"
			    android:layout_marginTop="2dp"
			    android:layout_marginBottom="2dp"
			    android:layout_marginLeft="2dp"
			    android:layout_marginRight="2dp"
			    android:onClick="rollStrength"
	            android:src="@drawable/ic_launcher" />
            <ImageView
                android:id="@+id/dice_dex"
	            android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_weight="1"
			    android:layout_marginBottom="2dp"
			    android:layout_marginLeft="2dp"
			    android:layout_marginRight="2dp"
			    android:onClick="rollDexterity"
	            android:src="@drawable/ic_launcher" />
            <ImageView
                 android:id="@+id/dice_con"
	            android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_weight="1"
			    android:layout_marginBottom="2dp"
			    android:layout_marginLeft="2dp"
			    android:layout_marginRight="2dp"
			    android:onClick="rollConstitution"
	            android:src="@drawable/ic_launcher" />
            <ImageView
                 android:id="@+id/dice_int"
	            android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_weight="1"
			    android:layout_marginBottom="2dp"
			    android:layout_marginLeft="2dp"
			    android:layout_marginRight="2dp"
			    android:onClick="rollIntelligence"
	            android:src="@drawable/ic_launcher" />
            <ImageView
                 android:id="@+id/dice_wis"
	            android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_weight="1"
			    android:layout_marginBottom="2dp"
			    android:layout_marginLeft="2dp"
			    android:layout_marginRight="2dp"
			    android:onClick="rollWisdom"
	            android:src="@drawable/ic_launcher" />
            <ImageView
                 android:id="@+id/dice_cha"
	            android:layout_width="match_parent"
			    android:layout_height="0dp"
			    android:layout_weight="1"
			    android:layout_marginBottom="2dp"
			    android:layout_marginLeft="2dp"
			    android:layout_marginRight="2dp"
			    android:onClick="rollCharisma"
	            android:src="@drawable/ic_launcher" />
        </LinearLayout>
 
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginTop="2dp"
	    android:layout_marginBottom="2dp"
	    android:layout_marginLeft="2dp"
	    android:layout_marginRight="2dp"
	    android:background="@drawable/customborder_padding_black" >
        <TextView
            android:id="@+id/inf_text"
            android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:gravity="center"
            android:text="Character Info" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="3"
        android:orientation="horizontal" >
        <TextView
	            android:id="@+id/hp_text"
	            android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:layout_weight="1"
			    android:gravity="center"
			    android:background="#000"
			    android:textColor="#FFF"
			    android:layout_marginTop="2dp"
			    android:layout_marginBottom="2dp"
			    android:layout_marginLeft="2dp"
			    android:layout_marginRight="2dp"
			    android:onClick="viewHP"
	            android:text="@string/health" />
        
    </LinearLayout>

</LinearLayout>
